--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,18 @@
             <i class="large material-icons">flight_takeoff</i>
             <a href="#" class="brand-logo">Avia Tickets</a>
           </div>
+          <div class="favorites">
+            <!-- Dropdown Trigger -->
+            <a
+              class="dropdown-trigger btn purple lighten-5 black-text"
+              href="#"
+              data-target="dropdown1"
+              >Favorites</a
+            >
+
+            <!-- Dropdown Structure -->
+            <div id="dropdown1" class="dropdown-content"></div>
+          </div>
           <ul id="nav-mobile" class="right hide-on-med-and-down ml-auto">
             <li>
               <div class="input-field currency-select">
@@ -39,7 +51,7 @@
             <div class="card">
               <form name="locationControls">
                 <div class="card-content">
-                  <span class="card-title">Card Title</span>
+                  <span class="card-title">Search the cheapest aviatickets!</span>
                   <div class="input-field">
                     <input
                       type="text"
