--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
             <!-- Dropdown Structure -->
             <div id="dropdown1" class="dropdown-content"></div>
           </div>
-          <ul id="nav-mobile" class="right hide-on-med-and-down ml-auto">
+          <ul id="nav-mobile" class="right  ml-auto">
             <li>
               <div class="input-field currency-select">
                 <select id="currency">
